# HyLauncher

./: .env.example  .gitignore  LICENSE  README.md  index.html  manifest-example.json  manifest.json  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  updater.rs
src-tauri/src/auth/: account_store.rs  microsoft.rs  mod.rs  offline.rs
src-tauri/src/discord/: mod.rs
src-tauri/src/minecraft/: fabric.rs  java_manager.rs  launcher.rs  mod.rs  version_manifest.rs
src-tauri/src/modpack/: diff.rs  downloader.rs  manifest.rs  mod.rs  modrinth.rs
src-tauri/src/utils/: error.rs  http.rs  mod.rs  paths.rs  storage.rs
src/components/: AccountAvatar.tsx  AccountSelector.tsx  Background.tsx  CatalogTabs.tsx  GameRunningPanel.tsx  MicrosoftLogin.tsx  ModIcon.tsx  OfflineLogin.tsx  PlayButton.tsx  PlayDashboard.tsx  ProgressBar.tsx  SettingsPanel.tsx  SplashScreen.tsx  StatusBanner.tsx  ViewModeToggle.tsx
src/hooks/: useAuth.ts  useDiscordPresence.ts  useLaunch.ts  useModIcons.ts  useModpack.ts  useProjectIcons.ts
src/lib/: accountAvatar.ts  i18n.tsx  tauri-commands.ts  types.ts
